adjustments and destructuring

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" src="./img/img-forca.gif" />
+    <link rel="icon" type="icon" href="https://cdn-icons-png.flaticon.com/512/123/123985.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
